structural-typing/tests/ui/modify_typo.stderr
error: Unknown field 'emial' in modify!. Valid fields: name, email
  --> tests/ui/modify_typo.rs:3:1
   |
 3 | #[structural]
   | ^^^^^^^^^^^^^
...
10 |     type Invalid = user::modify!(user::AllAbsent, +emial);  // Typo: "emial" instead of "email"
   |                    -------------------------------------- in this macro invocation
   |
   = note: this error originates in the macro `user::modify` (in Nightly builds, run with -Z macro-backtrace for more info)
